--- a/nextproj/soundbytes/src/app/tutorial/TutorialPage.css
+++ b/nextproj/soundbytes/src/app/tutorial/TutorialPage.css
@@ -11,8 +11,8 @@ body {
     font-size: 2.8em;
     color: #FFFFFF;
     text-align: left;
-    margin-left:150px;
-    margin-right:150px;
+    margin-left:350px;
+    margin-right:350px;
     margin-top:159px;
     margin-bottom: 100px;
     line-height: 1.2;
@@ -87,7 +87,7 @@ body {
   }
 
   .tutorialHeader {
-    color: #C2DAF4;
+    color: #632024;
     font-size: 2.8em;
     text-align:center;
     margin-top:120px;
@@ -215,9 +215,9 @@ body {
   }
   
   .step-text h2 {
-    font-size: 18px;
+    font-size: 30px;
     margin-bottom: 10px;
-    color: #ffffff;
+    color: #C2DAF4;
   }
   
   .step-text p {
